# homelightcontrol

./: README.md
Desktop Application/: CMakeLists.txt
Desktop Application/src/: CMakeLists.txt  Main.qml  main.cpp
Desktop Application/src/qml/: BedsideSettings.qml  Home.qml  Main.qml  OfficeSettings.qml  Sidebar.qml
RF-nano button/: platformio.ini
RF-nano button/src/: main.cpp
RF-nano light/: platformio.ini
RF-nano light/src/: main.cpp
